--- a/.github/workflows/Go-Build-&-Docker-Build-Push.yml
+++ b/.github/workflows/Go-Build-&-Docker-Build-Push.yml
@@ -35,7 +35,7 @@ jobs:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and push
+      - name: Build and Push
         uses: docker/build-push-action@v2
         with:
           push: true
