--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -4,24 +4,12 @@ on:
   push:
     branches:
       - main
+      - master
   pull_request:
     branches:
       - main
-
+      - master
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v3
-
-    - name: Set up Go
-      uses: actions/setup-go@v4
-      with:
-        go-version: '1.20'
-
-    - name: Build
-      run: go build main.go
-  
   deploy:
     runs-on: ubuntu-latest
     steps:
