--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -39,4 +39,4 @@ jobs:
             cd ${{secrets.AWS_PATH}}
             sudo docker-compose down -v
             sudo docker-compose pull
-            sudo docker-compose up
+            sudo docker-compose up -d
