--- a/.github/workflows/Deploy.yml
+++ b/.github/workflows/Deploy.yml
@@ -37,6 +37,6 @@ jobs:
 
           script: |
             cd ${{secrets.AWS_PATH}}
-            sudo docker-compose down -v
-            sudo docker-compose pull
-            sudo docker-compose up -d
+            docker-compose down -v
+            docker-compose pull
+            docker-compose up -d
